fix video copy-paste

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,14 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# dataset and wandb cache files
+*/datasets/
+*/OUTPUT/
+*/wandb/
+
+# local scripts
+*/*.sh
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -51,6 +59,9 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+debug.ipynb
+*/OUTPUT-DIR*
+*/debug*
 
 # Translations
 *.mo
